--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-navigation/stack": "^5.12.6",
     "@reduxjs/toolkit": "^1.5.0",
     "@thecodingmachine/redux-toolkit-wrapper": "1.3.0",
+    "appcenter": "4.0.2",
+    "appcenter-analytics": "4.0.2",
+    "appcenter-crashes": "4.0.2",
     "axios": "^0.21.1",
     "i18next": "^19.8.4",
     "react": "16.13.1",
